Process Hacker

2.37
 * HIGHLIGHTS:
   * Updated for Windows 10
   * Fixed crash that occurred under some conditions when processes terminated
 * OTHER CHANGES:
   * Added warning when trying to search for handles when the system has too many handles open
   * Updated DotNetTools plugin:
     * Rewrite of .NET Performance statistics and AppDomain enumeration
   * Updated NetAdapters plugin:
     * Added adapter details window
   * Updated ToolStatus plugin:
     * Added CPU, Memory and I/O graphs to the toolbar (not enabled by default)
     * Added toolbar and status bar customization, as well as a new theme
     * Added option to auto-hide the main menu
   * Updated UserNotes plugin:
     * Added individual process highlighting support

2.36
 * HIGHLIGHTS:
   * New rich pop-up UI when hovering the cursor over a tray icon, showing the most active processes
   * Completely new Memory tab for processes, with heap, stack and working set usage
   * Process Hacker now takes 32-bit dumps of 32-bit processes on 64-bit Windows
     * NOTE: When using the portable (.zip) release, the entire archive must be extracted
   * Updated DotNetTools plugin:
     * Process Hacker now displays managed stack traces for 32-bit .NET processes on 64-bit Windows
     * Fixed inaccurate stack traces when clicking Refresh
     * Added AppDomain column for threads in .NET programs
 * OTHER CHANGES:
   * Added customizable bytes per row setting for memory editor
   * Dramatically faster handle listing and search when running without administrative privileges
   * Improved accuracy and speed of symbol resolution, especially when new modules are loaded
   * Added trigger and delayed start information to service list
   * Added file information to service list tooltips
   * Balloon tips for process/service notifications are now clickable
   * Added handle names for unnamed File objects
   * Added I/O Priority to tray icon process menu