@@ -79,6 +79,7 @@ VOID PhpFreeLogEntry(
 PPH_LOG_ENTRY PhpCreateProcessLogEntry(
     _In_ UCHAR Type,
     _In_ HANDLE ProcessId,
+    _In_opt_ HANDLE QueryHandle,
     _In_ PPH_STRING Name,
     _In_opt_ HANDLE ParentProcessId,
     _In_opt_ PPH_STRING ParentName
@@ -97,6 +98,16 @@ PPH_LOG_ENTRY PhpCreateProcessLogEntry(
     {
         PhReferenceObject(ParentName);
         entry->Process.ParentName = ParentName;
+    }
+
+    if (entry->Type == PH_LOG_ENTRY_PROCESS_DELETE)
+    {
+        PROCESS_BASIC_INFORMATION basicInfo;
+
+        if (NT_SUCCESS(PhGetProcessBasicInformation(QueryHandle, &basicInfo)))
+        {
+            entry->Process.ExitStatus = basicInfo.ExitStatus;
+        }
     }
 
     return entry;
@@ -166,12 +177,13 @@ VOID PhClearLogEntries(
 VOID PhLogProcessEntry(
     _In_ UCHAR Type,
     _In_ HANDLE ProcessId,
+    _In_opt_ HANDLE QueryHandle,
     _In_ PPH_STRING Name,
     _In_opt_ HANDLE ParentProcessId,
     _In_opt_ PPH_STRING ParentName
     )
 {
-    PhpLogEntry(PhpCreateProcessLogEntry(Type, ProcessId, Name, ParentProcessId, ParentName));
+    PhpLogEntry(PhpCreateProcessLogEntry(Type, ProcessId, QueryHandle, Name, ParentProcessId, ParentName));
 }
 
 VOID PhLogServiceEntry(
@@ -206,7 +218,7 @@ PPH_STRING PhFormatLogEntry(
             HandleToUlong(Entry->Process.ParentProcessId)
             );
     case PH_LOG_ENTRY_PROCESS_DELETE:
-        return PhFormatString(L"Process terminated: %s (%u)", Entry->Process.Name->Buffer, HandleToUlong(Entry->Process.ProcessId));
+        return PhFormatString(L"Process terminated: %s (%u); exit status 0x%x", Entry->Process.Name->Buffer, HandleToUlong(Entry->Process.ProcessId), Entry->Process.ExitStatus);
     case PH_LOG_ENTRY_SERVICE_CREATE:
         return PhFormatString(L"Service created: %s (%s)", Entry->Service.Name->Buffer, Entry->Service.DisplayName->Buffer);
     case PH_LOG_ENTRY_SERVICE_DELETE:
